--- a/css/styles.css
+++ b/css/styles.css
@@ -486,3 +486,63 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 }
 .social-media-link:focus{ background-color: #31d0aa; }
 .svg-social-media{ fill: #F4F4FD ;}
+
+.button-subscribe{color: var(--WHITE, #FFF);
+text-align: center;
+/* Button Text */
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 24px; /* 150% */
+letter-spacing: 0.64px;
+display: inline-flex;
+padding: 8px 24px;
+justify-content: center;
+align-items: center;
+gap: 16px;
+border-radius: 4px;
+background: var(--IRIS, #4D5AE5);
+}
+.svg-social-media{ fill: white;}
+input::placeholder{ color: var(--WHITE, #FFF);
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.48px;}
+
+
+    /* modal */
+.backdrop{ 
+    position: fixed;
+ inset: 0;
+ display: flex;
+align-items: center;
+justify-content: center;
+background-color: rgba(0, 0, 0, 0.5);
+opacity: 1;
+visibility: visible;
+transition: opacity 250ms ease-in-out 
+visibility 250ms ease-in-out;}
+
+.is-hidden{
+    opacity: 0;
+ visibility: hidden;
+}
+
+.modal{
+    position: relative;
+    width: 408px;
+    height: 584px;
+    background-color: var(--DAIRY, #FCFCFC);
+    border-radius: 4px;
+    padding: 24px;
+}
+.modal-close{
+ position: absolute;
+ top: 24px;
+ right: 24px;
+
+}
