--- a/css/styles.css
+++ b/css/styles.css
@@ -612,20 +612,17 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
     border: none;
 
 }
+.modal-button:hover .close-svg{fill: #ffffff; }
 .modal-button:focus{
     background-color: #404bbf;
     border: none;
 }
+.modal-button:focus .close-svg{ fill: #ffffff;}
 .close-svg{
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
-.close-svg:hover{ 
-    fill: #ffffff;
-}
-.close-svg:focus{
-    fill: #ffffff;
-}
+
 .para-modal{ 
     font-weight: 500;
     font-size: 16px;
