--- a/css/styles.css
+++ b/css/styles.css
@@ -638,7 +638,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
 
  }
 
- .label-user-name{
+ .label-modal{
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
@@ -650,7 +650,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
 position: relative;
  }
 
- .input-user-name{
+ .input-modal{
     width: 100%;
     height: 40px;
     border: 1px solid rgba(46, 47, 66, 0.4);
@@ -661,13 +661,91 @@ position: relative;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
  }
- .input-user-name:focus{ border-color: #4D5AE5;}
- .svg-person{
+ .input-modal:focus{ border-color: #4D5AE5;}
+ 
+ .svg-modal{
     position: absolute;
     left: 16px;
     top: 50%;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
  }
- .input-user-name:focus .svg-person{fill: #4D5AE5; }
+.input-modal:focus+ .svg-modal{fill:#4d5ae5;}
+
+.modal-cont-comment{ 
+    margin-bottom: 16px;
+
+}
+.textarea-modal{ 
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding: 8px 16px;
+    outline: transparent;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.textarea-modal:focus{
+    border-color: #4D5AE5;
+}
+.container-checkbox-label{
+    margin-bottom: 24px;
+
+}
+.input-privacy{
+   
+}
+.label-user-privacy{ 
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8E8F99;
+
+}
+.lable-span{ 
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+
+}
+.svg-vector{ 
+
+}
+.input-privacy:checked .lable-span{background-color: #404bbf; 
+border: none;
+fill: #F4F4FD;
+}
+.link-modal{ 
+    color: #4d5ae5;
+}
+.modal-button-send{ 
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4D5AE5;
+    border: none;
+    border-radius: 4px;
+ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
+}
