--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,6 @@ header{ }
 .page-container{ min-height: 100vh;
     display: flex;
     flex-direction: column;
-
 }
 main{flex-grow: 1;}
 .header-inner{  
@@ -392,15 +391,14 @@ margin-bottom: 72px;}
 .container{ width: 1158px;
     margin: 0 auto;
     padding: 0 15px 0 15px;}
-
+.footer-div {
+    margin: 0 auto;
+}
 .porf-inside{  }
 .footer{ background-color: #2E2F42;
 padding: 100px 0 100px;
 display:inline-flex;
 
-}
-.footer-div {
-    margin: 0 auto;
 }
 .footer-p{ color:#F4F4FD;
     font-family: Roboto;
@@ -409,7 +407,7 @@ display:inline-flex;
     letter-spacing: 0.32px;
     width: 264px;
     text-align: left;
-margin-top: 18px;}
+}
 .logo-span{ color: #2E2F42;
     font-family: Raleway, sans-serif;   
     font-size: 18px;
@@ -461,8 +459,8 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 .footer-div{display: flex;
  align-items: baseline;
   }
-.footer-logo-para{
-    margin-right: 120px;
+.footer-logo-para{margin-right: 120px;
+    
  }
 
 .media-footer-box {
